# ceres_python_bindings

./: .gitignore  .gitmodules  AddToCeres.cmake  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
LICENSES/: BINDINGS_LICENSE
cmake/: FindCeres.cmake  FindGlog.cmake  pytorch_stuff.cmake
docs/: debugging_log.md  pytorch_stuff.md
examples/: ceres_hello_world_analytic_diff.py  ceres_hello_world_example.py  ceres_rosenbrock_autodiff.py  ceres_rosenbrock_example.py  hello_world_python_autodiff.py  manual_setting_sys_path.py  pose_graph_slam_example.py  pytorch_torchscript_example.py  utilities.py
python_bindings/: ceres_examples_module.cpp  custom_cpp_cost_functions.cpp  python_module.cpp  pytorch_cost_function.cpp  pytorch_cost_function.h  pytorch_module.cpp
python_tests/: ceres_hello_world_analytic_diff.py  ceres_hello_world_example.py  ceres_rosenbrock_autodiff.py  ceres_rosenbrock_example.py  ceres_simple_bundle_adjuster.py  debug_functions.py  hello_world_python_autodiff.py  pose_graph_slam_example.py  pytorch_torchscript_example.py  test_python_defined_cost_function.py
tests/: pytorch_test.cpp
