[metadata]
name = PyCeres
description = Python Bindings for Ceres library
long_description = file: README.md; charset=UTF-8
long_description_content_type = text/markdown
author = Edwinem
author_email = 735010+Edwinem@users.noreply.github.com
license = BSD
platforms = any
url = https://github.com/Edwinem/ceres_python_bindings
project_urls =
    Source = https://github.com/Edwinem/ceres_python_bindings
    Tracker = https://github.com/Edwinem/ceres_python_bindings/issues
keywords = nonlinear least squares optimization
classifiers =
    Development Status :: Production/Stable
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
python_requires = >=3.6

[options.extras_require]
testing =
    pytest
    numpy
all =
    %(testing)s

[tool:pytest]
testpaths = test/python